--- a/src/SFA.Apprenticeships.Web.Recruit/Web.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.config
@@ -40,7 +40,7 @@
     <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.5.1"/>
     <httpRuntime targetFramework="4.5.1"/>
-    <httpCookies httpOnlyCookies="true" requireSSL="true" />
+    <httpCookies httpOnlyCookies="true" requireSSL="false" />
     <customErrors mode="Off"/>
   </system.web>
   <system.webServer>
