Sprint 3: flushing out more framework elements (mediators)

--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -347,6 +347,8 @@
     <Compile Include="ViewModels\Provider\ProviderViewModel.cs" />
     <Compile Include="ViewModels\ProviderUser\ProviderUserViewModel.cs" />
     <Compile Include="ViewModels\ProviderUser\SettingsViewModel.cs" />
+    <Compile Include="ViewModels\VacancyPosting\EmployerResultsViewModel.cs" />
+    <Compile Include="ViewModels\VacancyPosting\EmployerResultViewModel.cs" />
     <Compile Include="ViewModels\VacancyPosting\EmployerSearchViewModel.cs" />
     <Compile Include="ViewModels\VacancyPosting\EmployerFilterViewModel.cs" />
     <Compile Include="ViewModels\Vacancy\EmployerViewModel.cs" />
