--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.csproj
@@ -108,6 +108,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\MongoReferenceNumber.cs" />
+    <Compile Include="ReferenceNumberRepository.cs" />
     <Compile Include="Entities\MongoApprenticeshipVacancy.cs" />
     <Compile Include="IoC\VacancyRepositoryRegistry.cs" />
     <Compile Include="Mappers\ApprenticeshipVacancyMappers.cs" />
