--- a/src/SFA.Apprenticeships.Infrastructure.EmployerDataService/SFA.Apprenticeships.Infrastructure.EmployerDataService.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.EmployerDataService/SFA.Apprenticeships.Infrastructure.EmployerDataService.csproj
@@ -24,6 +24,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Dev|AnyCPU'">
     <OutputPath>bin\Dev\</OutputPath>
