--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -299,6 +299,8 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\VacancyPostingController.cs" />
     <Compile Include="Converters\AddressViewModelConverter.cs" />
+    <Compile Include="Converters\EmployerViewModelConverter.cs" />
+    <Compile Include="Converters\VacancyViewModelConverter.cs" />
     <Compile Include="Mediators\ProviderUser\IProviderUserMediator.cs" />
     <Compile Include="Mediators\ProviderUser\ProviderUserMediator.cs" />
     <Compile Include="Mediators\ProviderUser\ProviderUserMediatorCodes.cs" />
