--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Providers/SFA.Apprenticeships.Infrastructure.Repositories.Providers.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Providers/SFA.Apprenticeships.Infrastructure.Repositories.Providers.csproj
@@ -107,10 +107,12 @@
     </Compile>
     <Compile Include="Entities\MongoProvider.cs" />
     <Compile Include="Entities\MongoProviderSite.cs" />
+    <Compile Include="Entities\MongoProviderSiteEmployerLink.cs" />
     <Compile Include="IoC\ProviderRepositoryRegistry.cs" />
     <Compile Include="Mappers\ProviderMappers.cs" />
     <Compile Include="ProviderRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProviderSiteEmployerLinkRepository.cs" />
     <Compile Include="ProviderSiteRepository.cs" />
   </ItemGroup>
   <ItemGroup />
