Adding service references to public repo

--- a/config/Demo/Configs/settings.config
+++ b/config/Demo/Configs/settings.config
@@ -40,7 +40,11 @@
 			  
             <endpoint address="https://apprenticeshipvacancymatchingservice.lsc.gov.uk/Services/ReferenceData/ReferenceData51.svc"
                 binding="basicHttpBinding" bindingConfiguration="SFABasicHttpBinding"
-                contract="LegacyReferenceDataProxy.IReferenceData" name="ReferenceData" />			  
+                contract="LegacyReferenceDataProxy.IReferenceData" name="ReferenceData" />
+
+            <endpoint address="https://services.edrs.lsc.gov.uk/lookup17.asmx"
+                binding="basicHttpBinding" bindingConfiguration="SFABasicHttpBinding"
+                contract="EmployerDataService.EmployerLookupSoap" name="EmployerDataService" />
         </client>
     </system.serviceModel>
 </configuration>
