--- a/src/SFA.Apprenticeship.Api.AvmsCompatability/SFA.Apprenticeship.Api.AvmsCompatability.csproj
+++ b/src/SFA.Apprenticeship.Api.AvmsCompatability/SFA.Apprenticeship.Api.AvmsCompatability.csproj
@@ -86,6 +86,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -128,11 +130,68 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\ApplicationType.cs" />
+    <Compile Include="Common\ExternalSystemType.cs" />
+    <Compile Include="Common\VacancyDetailsSearchLocationType.cs" />
+    <Compile Include="Common\VacancyLocationType.cs" />
+    <Compile Include="Common\VacancyStatus.cs" />
+    <Compile Include="Common\VacancyType.cs" />
+    <Compile Include="Common\VacancyUploadResult.cs" />
+    <Compile Include="DataContracts\Version50\AddressData.cs" />
+    <Compile Include="DataContracts\Version50\ApplicationTrackingData.cs" />
+    <Compile Include="DataContracts\Version50\ApplicationTrackingResultData.cs" />
+    <Compile Include="DataContracts\Version50\ApplicationTrackingVacancyReferenceData.cs" />
+    <Compile Include="DataContracts\Version50\ApprenticeshipFrameworkAndOccupationData.cs" />
+    <Compile Include="DataContracts\Version50\ApprenticeshipTypeData.cs" />
+    <Compile Include="DataContracts\Version50\CountyData.cs" />
+    <Compile Include="DataContracts\Version50\ElementErrorData.cs" />
+    <Compile Include="DataContracts\Version50\ErrorCodesData.cs" />
+    <Compile Include="DataContracts\Version50\MultisiteVacanciesData.cs" />
+    <Compile Include="DataContracts\Version50\RegionData.cs" />
+    <Compile Include="DataContracts\Version50\VacancyDetailResponseData.cs" />
+    <Compile Include="DataContracts\Version50\VacancyFullData.cs" />
+    <Compile Include="DataContracts\Version50\VacancySearchData.cs" />
+    <Compile Include="DataContracts\Version50\VacancySummaryData.cs" />
+    <Compile Include="DataContracts\Version50\VacancySummaryResponseData.cs" />
+    <Compile Include="DataContracts\Version50\VacancyTransferLogData.cs" />
+    <Compile Include="DataContracts\Version50\VacancyUploadData.cs" />
+    <Compile Include="DataContracts\Version50\VacancyUploadResultData.cs" />
+    <Compile Include="DataContracts\Version50\WebInterfaceGenericDetailsData.cs" />
+    <Compile Include="FaultContracts\Version50\SystemFaultContract.cs" />
+    <Compile Include="MessageContracts\Version50\BulkVacancyUploadRequest.cs" />
+    <Compile Include="MessageContracts\Version50\BulkVacancyUploadResponse.cs" />
+    <Compile Include="MessageContracts\Version50\GetApprenticeshipFrameworksRequest.cs" />
+    <Compile Include="MessageContracts\Version50\GetApprenticeshipFrameworksResponse.cs" />
+    <Compile Include="MessageContracts\Version50\GetApprenticeshipTypesRequest.cs" />
+    <Compile Include="MessageContracts\Version50\GetApprenticeshipTypesResponse.cs" />
+    <Compile Include="MessageContracts\Version50\GetCountiesRequest.cs" />
+    <Compile Include="MessageContracts\Version50\GetCountiesResponse.cs" />
+    <Compile Include="MessageContracts\Version50\GetErrorCodesRequest.cs" />
+    <Compile Include="MessageContracts\Version50\GetErrorCodesResponse.cs" />
+    <Compile Include="MessageContracts\Version50\GetRegionRequest.cs" />
+    <Compile Include="MessageContracts\Version50\GetRegionResponse.cs" />
+    <Compile Include="MessageContracts\Version50\NavmsInternalMessageHeader.cs" />
+    <Compile Include="MessageContracts\Version50\NavmsInternalResponseHeader.cs" />
+    <Compile Include="MessageContracts\Version50\NavmsMessageHeader.cs" />
+    <Compile Include="MessageContracts\Version50\NavmsResponseHeader.cs" />
+    <Compile Include="MessageContracts\Version50\SendMessageRequest.cs" />
+    <Compile Include="MessageContracts\Version50\SubmitApplicationTrackingRequest.cs" />
+    <Compile Include="MessageContracts\Version50\SubmitApplicationTrackingResponse.cs" />
+    <Compile Include="MessageContracts\Version50\VacancyDetailsRequest.cs" />
+    <Compile Include="MessageContracts\Version50\VacancyDetailsResponse.cs" />
+    <Compile Include="MessageContracts\Version50\VacancySummaryRequest.cs" />
+    <Compile Include="MessageContracts\Version50\VacancySummaryResponse.cs" />
+    <Compile Include="CommonNamespaces.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceContracts\Version50\IApplicationTracking.cs" />
+    <Compile Include="ServiceContracts\Version50\IBulkVacancyUpload.cs" />
+    <Compile Include="ServiceContracts\Version50\IReferenceData.cs" />
+    <Compile Include="ServiceContracts\Version50\IVacancyDetails.cs" />
+    <Compile Include="ServiceContracts\Version50\IVacancySummary.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="MessageContracts\Version51\" />
     <Folder Include="ServiceContracts\Version51\" />
-    <Folder Include="ServiceContracts\Version52\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
