--- a/src/SFA.Apprenticeships.Infrastructure.TacticalDataServices/packages.config
+++ b/src/SFA.Apprenticeships.Infrastructure.TacticalDataServices/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CuttingEdge.Conditions" version="1.2.0.0" targetFramework="net451" />
   <package id="Dapper" version="1.42" targetFramework="net451" />
   <package id="Elasticsearch.Net" version="1.7.0" targetFramework="net451" />
   <package id="NEST" version="1.7.0" targetFramework="net451" />
