--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -452,6 +452,8 @@
     <Content Include="Content\_assets\js\vendor\jstorage.js" />
     <Content Include="Content\_assets\js\vendor\modernizr-2.7.1.js" />
     <Content Include="Content\_assets\js\vendor\modernizr-custom.js" />
+    <Content Include="Content\_assets\js\vendor\select2.js" />
+    <Content Include="Content\_assets\js\vendor\select2.min.js" />
     <Content Include="Content\_assets\js\vendor\zxcvbn-async.js" />
     <Content Include="Content\_assets\js\vendor\zxcvbn.js" />
     <Content Include="Content\_assets\js\webtrends\webtrends.stub.js" />
